--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   </head>
   <body>
     <div id="app"></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="lib/vue.js"></script>
     <script src="lib/vue-router.js"></script>
     <script type="module" src="js/main.js"></script>
